src/main/kube/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: learnright
  name: provisioning
  labels:
    app: provisioning
spec:
  selector:
    matchLabels:
      app: provisioning
  template:
    metadata:
      labels:
        app: provisioning
    spec:
      containers:
      - name: provisioning
        image: registry.minikube.local:80/testunited/examples-learnright-provisioning:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
