src/main/kube/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: learnright
  name: provisioning
spec:
  type: NodePort
  selector:
    app: provisioning
  ports:
  - protocol: TCP
    nodePort: 32011
    port: 80
    targetPort: 80
